--- a/modules/sub-modules/templates/cloud_init_templates/cloud-config.yml
+++ b/modules/sub-modules/templates/cloud_init_templates/cloud-config.yml
@@ -5,7 +5,8 @@ users:
     - default # Really important, keeps the default ubuntu user with the AWS key_pair
     - name: vault
       gecos: service vault user
-      shell: /usr/sbin/nologin
+      shell: /bin/bash
+      homedir: /opt/vault
       system: true
       lock_passwd: true
 
@@ -22,8 +23,10 @@ packages:
   - jq
   - terraform
   - awscli
+  - zip
+  - wget
 
-package_upgrade: false
+package_upgrade: true
 package_update: true
 
 # Adding the new hostname to /etc/hosts
